plugins {
    id 'uk.gov.justice.service.laa.laa-java-gradle-plugin' version '3.0.0'
    id 'uk.gov.justice.service.laa.laa-spring-boot-gradle-plugin' version '3.0.0'
    id "io.sentry.jvm.gradle" version "6.15.0"
}

ext {
    springDocVersion = "3.0.0"
    playwrightVersion = "1.52.0"
    testcontainersVersion = "1.20.6"
    apiGuardianVersion = "1.1.2"
    dataUserApiContractsVersion = "1.0.0-SNAPSHOT"
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

checkstyle {
    toolVersion = '10.23.0'
    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
}

repositories {
    mavenCentral()
    maven {
        name = 'GitHubPackages'
        url = uri('https://maven.pkg.github.com/ministryofjustice/laa-data-user-api')
        credentials {
            username = System.getenv('GITHUB_ACTOR') ?: project.findProperty('gpr.user')
            password = System.getenv('GITHUB_TOKEN') ?: project.findProperty('gpr.token')
        }
    }
}

sentry {
  includeSourceContext = true

  org = "ministryofjustice"
  projectName = "laa-portal-stabilisation"
  authToken = System.getenv("SENTRY_AUTH_TOKEN")

  autoInstallation {
    sentryVersion = "8.49.0"
    enabled = true
  }
}

sourceSets {
    playwrightTest {
        java {
            srcDir 'src/playwrightTest/java'
        }
        resources {
            srcDir 'src/playwrightTest/resources'
        }
        compileClasspath += sourceSets.main.output + configurations.testRuntimeClasspath
        runtimeClasspath += output + compileClasspath
    }
}

configurations {
    integrationTestImplementation.extendsFrom testImplementation
    integrationTestRuntimeOnly.extendsFrom testRuntimeOnly

    playwrightTestImplementation.extendsFrom testImplementation
    playwrightTestRuntimeOnly.extendsFrom testRuntimeOnly

    configureEach {
        exclude group: 'commons-logging', module: 'commons-logging'
    }
}

dependencies {

    // LAA & Gov UK Extensions
    implementation 'uk.gov.justice.service.laa:laa-spring-boot-starter-govuk-dialect'
    implementation 'uk.gov.service.notify:notifications-java-client:6.0.1-RELEASE'

    // Core Spring Boot 4 Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-session-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-graphql'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.sentry:sentry-spring-boot-4:8.49.0'
    implementation 'org.slf4j:jcl-over-slf4j:2.0.16'

    // Thymeleaf Security Integration for Spring Security 6+
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

    // Jackson 3 Dataformat Engine (Upgraded for Spring Boot 4 compatibility)
    implementation 'tools.jackson.dataformat:jackson-dataformat-csv:3.0.3'

    // Contracts library
    implementation("uk.gov.justice.laa:laa-data-user-api-contracts:${dataUserApiContractsVersion}") { changing = true }

    // Micro-Architectural / Cloud SDKs
    implementation('com.azure.spring:spring-cloud-azure-starter-active-directory:7.3.0') {
        exclude group: 'org.springframework.boot', module: 'spring-boot-jackson2'
        exclude group: 'com.fasterxml.jackson.core'
    }
    implementation 'com.azure:azure-identity'
    implementation 'com.microsoft.graph:microsoft-graph:6.2.0'
    implementation 'software.amazon.awssdk:sqs:2.30.0'
    implementation 'software.amazon.awssdk:ssm:2.30.0'
    implementation 'software.amazon.awssdk:sts:2.30.0'
    implementation 'io.getunleash:unleash-client-java:9.2.0'

    // Resiliency, Execution and Observability
    implementation 'org.springframework.retry:spring-retry:2.0.11'
    implementation 'org.springframework:spring-aspects'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // Database & Driver Layer
    implementation 'org.postgresql:postgresql'
    implementation 'org.springframework.boot:spring-boot-starter-liquibase'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    // Utilities & Core Framework Enhancements
    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springDocVersion}"
    implementation 'org.hibernate.validator:hibernate-validator'
    implementation 'org.apache.httpcomponents.client5:httpclient5'
    implementation 'org.modelmapper:modelmapper:3.2.6'

    // Tablesaw Data Processing Engine
    implementation 'tech.tablesaw:tablesaw-core:0.44.4'

    // JSON engine (with legacy Jackson transitives stripped out)
    implementation('tech.tablesaw:tablesaw-json:0.44.4') {
        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-databind'
        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-core'
    }

    runtimeOnly 'org.springframework.boot:spring-boot-properties-migrator'

    // Unit & Slice Integration Testing Libraries
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.graphql:spring-graphql-test'
    testImplementation 'org.springframework.security:spring-security-test'

    // Database Testcontainers Layer
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation "org.testcontainers:postgresql:${testcontainersVersion}"
    testImplementation "org.testcontainers:junit-jupiter:${testcontainersVersion}"
    testImplementation "org.testcontainers:testcontainers:${testcontainersVersion}"

    // End-to-End Browser Testing Configuration
    testImplementation "com.microsoft.playwright:playwright:${playwrightVersion}"
    playwrightTestImplementation "org.apiguardian:apiguardian-api:${apiGuardianVersion}"

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

}

test {
    useJUnitPlatform()

    doFirst {
        jvmArgs "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }}", '-Xshare:off'
    }

    testLogging {
        showStandardStreams = true
        events "failed", "skipped", "standard_out", "standard_error"
    }

    finalizedBy jacocoTestReport
}

tasks.withType(ProcessResources).configureEach {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

tasks.register('playwrightTest', Test) {
    description = 'Runs Playwright tests.'
    group = 'verification'
    testClassesDirs = sourceSets.playwrightTest.output.classesDirs
    classpath = sourceSets.playwrightTest.runtimeClasspath
    useJUnitPlatform()

    testLogging {
        showStandardStreams = true
        events "failed", "skipped", "standard_out", "standard_error"
    }
}

jacocoTestReport {
    reports {
        xml.required = true
    }
    afterEvaluate {
        classDirectories = files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    '**/config/SecurityConfig.class',
                    '**/model/**'
            ])
        })
    }
}
